--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,20 +12,20 @@
 
 <body>
     <section class="titleContainer">
-        Calculator
+        <a href="">Calculator</a>
     </section>
     <section class="calculationContainer">
         <div class="calculation"></div>
         <div class="result"></div>
     </section>
-    <section class="historyContainer">
+    <!-- <section class="historyContainer">
         <button>MC</button>
         <button>MR</button>
         <button>M+</button>
         <button>M-</button>
         <button>MS</button>
         <button>M^</button>
-    </section>
+    </section> -->
     <section class="buttonContainer">
         <button data-value="%">%</button>
         <button class="plusMinus" data-value="root" style="background-image: url(images/root.png)">
