remove extra button

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,20 +30,17 @@
         <button>M^</button>
     </section> -->
     <section class="buttonContainer">
-        <button data-value="%">%</button>
-        <button class="plusMinus" data-value="root" style="background-image: url(images/root.png)">
-        </button>
-        <button data-value="^">x^2</button>
-        <button data-value="">1/x</button>
-        <button data-value="clearAll">CE</button>
-        <button data-value="clear">C</button>
-        <button class="plusMinus" data-value="clear" style="background-image: url(images/clear.png)">
-        </button>
-        <button class="operationButton" data-value="/">÷</button>
+        <!-- <button class="plusMinus" data-value="root" style="background-image: url(images/root.png)"></button> -->
+        <!-- <button data-value="^">x^2</button>
+        <button data-value="">1/x</button> -->
+        <!-- <button data-value="clear">C</button> -->
+        <button data-value="clearAll" class="item1">CE</button>
+        <button class="plusMinus clear" data-value="clear" style="background-image: url(images/clear.png)"></button>
+        <!-- <button data-value="%">%</button> -->
         <button class="numButton" data-value="7">7</button>
         <button class="numButton" data-value="8">8</button>
         <button class="numButton" data-value="9">9</button>
-        <button class="operationButton" data-value="*">✕</button>
+        <button class="operationButton" data-value="+">+</button>
         <button class="numButton" data-value="4">4</button>
         <button class="numButton" data-value="5">5</button>
         <button class="numButton" data-value="6">6</button>
@@ -51,12 +48,13 @@
         <button class="numButton" data-value="1">1</button>
         <button class="numButton" data-value="2">2</button>
         <button class="numButton" data-value="3">3</button>
-        <button class="operationButton" data-value="+">+</button>
-        <button class="plusMinus" data-value="plusMinus" style="background-image: url(images/plusMinus.png)">
+        <button class="operationButton" data-value="*">✕</button>
+        <!-- <button data-value=".">.</button> -->
+        <!-- <button class="plusMinus" data-value="plusMinus" style="background-image: url(images/plusMinus.png)"> -->
         </button>
-        <button class="numButton" data-value="0">0</button>
-        <button data-value=".">.</button>
-        <button class="operationButton" data-value="=">=</button>
+        <button class="numButton zero" data-value="0">0</button>
+        <!-- <button class="operationButton" data-value="=">=</button> -->
+        <button class="operationButton" data-value="/">÷</button>
     </section>
 
     <script src="scripts/main.js"></script>
