--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,7 +35,7 @@
         <button data-value="">1/x</button> -->
         <!-- <button data-value="clear">C</button> -->
         <button data-value="clearAll" class="item1">CE</button>
-        <button class="plusMinus clear" data-value="clear" style="background-image: url(images/clear.png)"></button>
+        <button class="plusMinus clear" data-value="Backspace" style="background-image: url(images/clear.png)"></button>
         <!-- <button data-value="%">%</button> -->
         <button class="numButton" data-value="7">7</button>
         <button class="numButton" data-value="8">8</button>
@@ -58,6 +58,13 @@
     </section>
 
     <script src="scripts/main.js"></script>
+    <script>
+        window.addEventListener('keydown', (e) => {
+            let value = document.querySelector(`button[data-value="${e.key}"]`)
+            if (!value) return;
+            putVal(e.key);
+        })
+    </script>
 </body>
 
 </html>
