--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,6 +16,7 @@
         <div>
             <a href="">Calculator</a>
         </div>
+        <button class="checkBtn">Add to Home Screen</button>
     </section>
     <section class="calculationContainer">
         <div class="calculation"></div>
@@ -56,6 +57,8 @@
         <!-- <button class="operationButton" data-value="=">=</button> -->
         <button class="operationButton" data-value="/">÷</button>
     </section>
+
+    <script src="./scripts/install.js"></script>
 
     <script src="scripts/main.js"></script>
     <script>
