[refactor] remove extra dependencies, and code
- update div and mul button
- update readme

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,9 +41,9 @@
             <button class="numButton" data-value="1">1</button>
             <button class="numButton" data-value="2">2</button>
             <button class="numButton" data-value="3">3</button>
-            <button class="operationButton" data-value="*">✕</button>
+            <button class="operationButton" data-value="*">*</button>
             <button class="numButton zero" data-value="0">0</button>
-            <button class="operationButton" data-value="/">÷</button>
+            <button class="operationButton" data-value="/">/</button>
         </section>
 
         <script src="./scripts/install.js"></script>
