[refactor] update readme, dependencies
- Also, add github repo link in UI

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,11 @@
             <div>
                 <span class="title">Calculator</span>
                 <button class="checkBtn">Add to Home Screen</button>
+                <span>
+                    <a href="https://github.com/skrmain/calculator" target="_blank">
+                        <img class="github" src="images/github.png" alt="github">
+                    </a>
+                </span>
             </div>
         </section>
         <section class="calculationContainer">
